# KSE

./: .gitignore  README.md
Zban/: clean.sh  gui.sh  part3.cpp  part3old.cpp  plot.py  run.sh
belonogov/: 161005.ipynb  CMakeLists.txt  Gauss.cpp  Untitled.ipynb  Untitled1.ipynb  gauss.h  main.cpp  main.h  newton.h  solver_1_2.h
belonogov/.ipynb_checkpoints/: 161005-checkpoint.ipynb  Untitled1-checkpoint.ipynb
consts/: .gitignore  consts.h
gui/: Makefile  helper.cpp  log_plot.py
term7/: Adams.py  Constants.py  Euler.py  ImplicitEuler.py  Plots.py  Plots3d.py  RungeKutta.py  main.py
term7.2/: Constants.py  Plots.py  arch.7z  main.py  vanya.py  vanya_course_work.py
term7.3/: Constants.py  Plots  Plots.py  algo.py  main.py  time  vanya.py  vanya_course_work.py
